<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sportsman</string>
    <string name="title_section1">Home</string>
    <string name="diary">Diary</string>
    <string name="title_section3">Stats</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_map">Map</string>
    <string name="start_workout">Start new workout</string>
    <string name="add_workout">Add new workout</string>
    <string name="choose_sport">Choose sport:</string>
    <string name="pause_workout">Pause</string>
    <string name="resume_workout">Resume</string>
    <string name="stop_workout">Stop</string>
    <string name="delete_workout">Delete</string>
    <string name="title_activity_workout">Workout</string>
    <string name="title_activity_workout_finish">How was your mood?</string>
    <string name="all">All</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="last_workout">Last workout:</string>

    <string name="sport_inline">Inline</string>
    <string name="sport_bike">Bike</string>
    <string name="sport_running">Running</string>
    <string name="sport_skiing">Skiing</string>
    <string name="sport_ice_skating">Ice-skating</string>

    <string name="title_activity_workout_detail">Workout detail</string>
    <string name="show_map">Show on map</string>
    <string name="edit">Edit</string>
    <string name="workout">Workout</string>
    <string name="distance_detail">Distance:</string>
    <string name="duration_detail">Duration:</string>
    <string name="burned_detail">Burned:</string>
    <string name="avg_speed_detail">Average speed:</string>
    <string name="start_time_detail">Start:</string>
    <string name="start_date_detail">Date:</string>
    <string name="sport_detail">Sport:</string>
    <string name="avg_speed_graph">Average speed</string>
    <string name="title_activity_workout_edit">Workout</string>
    <string name="save">Save</string>
    <string name="graph">Graph stats</string>
    <string name="title_activity_stats">Stats</string>
    <string name="duration_null">Duration cannot be 0.</string>
    <string name="cancel_workout">Do you want to discard this workout?</string>
    <string name="no_map_data">No map data available.</string>

    <string name="total_workouts">Total workouts:</string>
    <string name="num_of_workouts">Num of workouts</string>
    <string name="total_distance">Total distance:</string>
    <string name="total_calories">Total burned kCalories:</string>

    <string name="last_7_days">Last 7 days</string>
    <string name="last_30_days">Last 30 days</string>

    <string-array name="graphs">
        <item>Distance</item>
        <item>Time</item>
        <item>Calories</item>
        <item>Avg. speed</item>
    </string-array>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

</resources>
