<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.tstudioz.sportsman.app.activities.WorkoutDetailActivity" >
    <item android:id="@+id/action_map"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/show_map"
        android:orderInCategory="100"
        android:showAsAction="always" />
    <item android:id="@+id/action_edit"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/edit"
        android:orderInCategory="100"
        android:showAsAction="always" />
    <item android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete_workout"
        android:orderInCategory="100"
        android:showAsAction="always" />
</menu>
