<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.tstudioz.sportsman.app.WorkoutEditActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:text="@string/distance_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Spinner android:id="@+id/edit_sport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:text="@string/distance_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText android:id="@+id/edit_distance"
            android:layout_alignParentRight="true"
            android:inputType="numberDecimal"
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:text="@string/duration_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <com.tstudioz.sportsman.app.TimeInput
            android:id="@+id/edit_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:text="@string/start_time_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <com.tstudioz.sportsman.app.TimeInput
            android:id="@+id/edit_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:text="@string/start_date_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <DatePicker android:id="@+id/edit_start_date"
            android:calendarViewShown="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></DatePicker>
    </RelativeLayout>

    <Button android:id="@+id/edit_btn_save"
        android:layout_centerHorizontal="true"
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
