<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.tstudioz.sportsman.app.WorkoutActivity">

    <LinearLayout android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView android:id="@+id/distance"
            android:text="0.0 km"
            android:textSize="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView android:id="@+id/time"
            android:text="00:23:11"
            android:textSize="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView android:id="@+id/speed"
            android:text="23.65 km/h"
            android:textSize="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout android:id="@+id/start_pause"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <View android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <Button android:id="@+id/btn_start_workout"
            android:text="@string/start_workout"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <Button android:id="@+id/btn_pause_workout"
            android:visibility="gone"
            android:text="@string/pause_workout"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <View android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout android:id="@+id/resume_stop"
        android:visibility="gone"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <View android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <Button android:id="@+id/btn_resume_workout"
            android:text="@string/resume_workout"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <Button android:id="@+id/btn_stop_workout"
            android:text="@string/stop_workout"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <View android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
