<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="100dp">

    <LinearLayout android:orientation="vertical"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:text="@string/choose_sport"
            android:textSize="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Spinner android:id="@+id/sports_spinner"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <Button android:id="@+id/btn_start_workout"
                android:text="@string/start_workout"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <LinearLayout android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <Button android:id="@+id/btn_add_workout"
                android:text="@string/add_workout"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <LinearLayout android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>