<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.tstudioz.sportsman.app.activities.WorkoutDetailActivity">

    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:id="@+id/date"
            android:text="10. 5. 2014"
            android:textSize="18dp"
            android:textColor="@android:color/holo_orange_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView android:id="@+id/time"
            android:layout_alignParentRight="true"
            android:text="13:34:12"
            android:textSize="18dp"
            android:textColor="@android:color/holo_purple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <TextView android:id="@+id/sport_name"
        android:text="@string/sport_inline"
        android:textSize="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TableRow>
                <TextView android:text="@string/distance_detail"
                    android:textSize="17dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView android:id="@+id/distance"
                    android:text="45.82 km"
                    android:textSize="23dp"
                    android:paddingLeft="20dp"
                    android:textColor="@android:color/holo_green_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>
            <TableRow>
                <TextView android:text="@string/duration_detail"
                    android:textSize="17dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView android:id="@+id/duration"
                    android:text="03:02:34"
                    android:textSize="23dp"
                    android:paddingLeft="20dp"
                    android:textColor="@android:color/holo_blue_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>
            <TableRow>
                <TextView android:text="@string/burned_detail"
                    android:textSize="17dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView android:id="@+id/calories"
                    android:text="348 kcal"
                    android:textSize="23dp"
                    android:paddingLeft="20dp"
                    android:textColor="@android:color/holo_red_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>
            <TableRow>
                <TextView android:text="@string/avg_speed_detail"
                    android:textSize="17dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView android:id="@+id/avg_speed"
                    android:text="32.23 km/h"
                    android:textSize="23dp"
                    android:paddingLeft="20dp"
                    android:textColor="@android:color/holo_orange_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>
        </TableLayout>

        <ImageView android:id="@+id/mood"
            android:layout_alignParentRight="true"
            android:src="@drawable/worse"
            android:layout_width="wrap_content"
            android:layout_height="80dp" />
    </RelativeLayout>

    <LinearLayout android:id="@+id/graph_layout"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </LinearLayout>

</LinearLayout>
